--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-select": "^5.3.2"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
